--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,27 @@
 #root {
   text-align: center;
 }
+
+.App.light {
+  background-color: white;
+  color: black;
+}
+
+.App.dark {
+  background-color: black;
+  color: white;
+}
+
+button {
+  padding: 10px 20px;
+  margin-top: 20px;
+  cursor: pointer;
+}
+.color{
+  color: red; 
+  }
+
+.link-container{
+  display: flex;
+  flex-direction: column;
+}
